--- a/schemes/base16/espresso.yaml
+++ b/schemes/base16/espresso.yaml
@@ -1,5 +1,5 @@
 scheme: "Espresso"
-author: "Alex Mirrington (https://github.com/alexmirrington)"
+author: "Unknown. Maintained by Alex Mirrington (https://github.com/alexmirrington)"
 base00: "2d2d2d"
 base01: "393939"
 base02: "515151"
