--- a/schemes/base16/icy.yaml
+++ b/schemes/base16/icy.yaml
@@ -3,8 +3,8 @@ author: "icyphox (https://icyphox.ga)"
 base00: "021012"
 base01: "031619"
 base02: "041f23"
-base03: "064048"
-base04: "08464f"
+base03: "052e34"
+base04: "064048"
 base05: "095b67"
 base06: "0c7c8c"
 base07: "109cb0"
