--- a/schemes/base16/solarized-dark.yaml
+++ b/schemes/base16/solarized-dark.yaml
@@ -1,5 +1,5 @@
 scheme: "Solarized Dark"
-author: "Ethan Schoonover (http://ethanschoonover.com/solarized)"
+author: "Ethan Schoonover (modified by aramisgithub)"
 base00: "002b36"
 base01: "073642"
 base02: "586e75"
