--- a/schemes/base16/papercolor-light.yaml
+++ b/schemes/base16/papercolor-light.yaml
@@ -1,18 +1,18 @@
 scheme: "PaperColor Light"
 author: "Jon Leopard (http://github.com/jonleopard) based on PaperColor Theme (https://github.com/NLKNguyen/papercolor-theme)"
-base00: "eeeeee" # background (main)
-base01: "e4e4e4" # negative (should be red)
-base02: "d0d0d0" # positive (should be green)
-base03: "a0a0a0" # string
-base04: "878787" # neutral (2nd background)
-base05: "444444" # comment
-base06: "333333" # typically storage class keywords
-base07: "222222" # foreground (normal text)
-base08: "008700" # 3rd background
-base09: "005f87" # typically import/try-catch keywords
-base0A: "d75f00" # typically type and more emphasized keywords
-base0B: "5f8700" # typically if/conditional/loop keywords
-base0C: "005faf" # accent (rarely used)
-base0D: "0087af" # typically number
-base0E: "8700af" # typically the rest of keywords
-base0F: "af0000" # highlight
+base00: "eeeeee" # Default Background
+base01: "af0000" # Lighter Background (Used for status bars, line number and folding marks)
+base02: "008700" # Selection Background
+base03: "5f8700" # Comments, Invisibles, Line Highlighting
+base04: "0087af" # Dark Foreground (Used for status bars)
+base05: "444444" # Default Foreground, Caret, Delimiters, Operators
+base06: "005f87" # Light Foreground (Not often used)
+base07: "878787" # Light Background (Not often used)
+base08: "bcbcbc" # Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted
+base09: "d70000" # Integers, Boolean, Constants, XML Attributes, Markup Link Url
+base0A: "d70087" # Classes, Markup Bold, Search Text Background
+base0B: "8700af" # Strings, Inherited Class, Markup Code, Diff Inserted
+base0C: "d75f00" # Support, Regular Expressions, Escape Characters, Markup Quotes
+base0D: "d75f00" # Functions, Methods, Attribute IDs, Headings
+base0E: "005faf" # Keywords, Storage, Selector, Markup Italic, Diff Changed
+base0F: "005f87" # Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
