--- a/schemes/base16/solarized-light.yaml
+++ b/schemes/base16/solarized-light.yaml
@@ -1,5 +1,5 @@
 scheme: "Solarized Light"
-author: "Ethan Schoonover (http://ethanschoonover.com/solarized)"
+author: "Ethan Schoonover (modified by aramisgithub)"
 base00: "fdf6e3"
 base01: "eee8d5"
 base02: "93a1a1"
