--- a/schemes/base16/synth-midnight-light.yaml
+++ b/schemes/base16/synth-midnight-light.yaml
@@ -1,13 +1,13 @@
-scheme: "Synth Midnight Terminal Dark"
+scheme: "Synth Midnight Terminal Light"
 author: "Michaël Ball (http://github.com/michael-ball/)"
-base00: "050608"
-base01: "1a1b1c"
-base02: "28292a"
-base03: "474849"
-base04: "a3a5a6"
-base05: "c1c3c4"
-base06: "cfd1d2"
-base07: "dddfe0"
+base00: "dddfe0"
+base01: "cfd1d2"
+base02: "c1c3c4"
+base03: "a3a5a6"
+base04: "474849"
+base05: "28292a"
+base06: "1a1b1c"
+base07: "050608"
 base08: "b53b50"
 base09: "ea770d"
 base0A: "c9d364"
