--- a/schemes/base16/zenburn.yaml
+++ b/schemes/base16/zenburn.yaml
@@ -1,18 +1,18 @@
 scheme: "Zenburn"
-author: "jnurmine - elnawe"
-base00: "3f3f3f"
-base01: "52504c"
-base02: "616756"
-base03: "5f7f5f"
-base04: "b3c0a5"
+author: "elnawe"
+base00: "383838"
+base01: "404040"
+base02: "606060"
+base03: "6f6f6f"
+base04: "808080"
 base05: "dcdccc"
-base06: "eae6e1"
-base07: "f7f3f3"
+base06: "c0c0c0"
+base07: "ffffff"
 base08: "dca3a3"
 base09: "dfaf8f"
 base0A: "e0cf9f"
-base0B: "7f9f7f"
+base0B: "5f7f5f"
 base0C: "93e0e3"
 base0D: "7cb8bb"
 base0E: "dc8cc3"
-base0F: "9fa7df"
+base0F: "000000"
